[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["pb_tool"]

[project]
name = "pb_tool"
version = "2.0.3"
description = "A tool to aid in QGIS Python plugin development"
authors = [{ name = "Gary Sherman", email = "gsherman@geoapt.com" }]
license = "GPL-2.0"
urls = { documentation = "http://g-sherman.github.io/plugin_build_tool" }
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Operating System :: OS Independent",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Build Tools",
    "License :: OSI Approved :: GNU General Public License v2 or later (GPLv2+)",
    "Topic :: Scientific/Engineering :: GIS"
]
keywords = ["QGIS PyQGIS"]
dependencies = [
    "click",
    "Sphinx",
    "colorama"
]

[project.scripts]
pb_tool = "pb_tool.pb_tool:cli"
pbt = "pb_tool.pb_tool:cli"